--- a/assets/main.scss
+++ b/assets/main.scss
@@ -30,6 +30,14 @@
   src: url('~assets/fonts/Fira_sans/FiraSans-MediumItalic.ttf') format('truetype');
 }
 
+@font-face {
+  font-family: 'Lobster';
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
+  src: url('~assets/fonts/Lobster_Two/LobsterTwo-Italic.ttf') format('truetype');
+}
+
 html {
   body {
     font-family: 'Fira Sans';
