skills, work and menu update

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -55,3 +55,11 @@ a {
     text-decoration: none;
     text-transform: uppercase;
 }
+.section-title {
+  font-family: "Lobster";
+  font-size: 30px;
+  margin-bottom: 50px;
+}
+.section-grey {
+  background-color: #f9f9f9;
+}
