--- a/assets/main.scss
+++ b/assets/main.scss
@@ -49,6 +49,10 @@ html {
   max-width: 1160px;
   margin: 0 auto;
   position: relative;
+  @media screen and (max-width: 1200px) {
+    max-width: 100%;
+    padding: 0 5%;
+  }
 }
 a {
     color: #999999;
@@ -59,6 +63,9 @@ a {
   font-family: "Lobster";
   font-size: 30px;
   margin-bottom: 50px;
+  @media screen and (max-width: 750px) {
+    margin-bottom: 20px;
+  }
 }
 .section-grey {
   background-color: #f9f9f9;
