--- a/assets/scss/colors.scss
+++ b/assets/scss/colors.scss
@@ -3,3 +3,8 @@ $white: #fff;
 $grey-1: #f9f9f9;
 $grey-2: #999999;
 $black: #292929;
+$darkyellow:  #41b38a;
+$darkwhite: #091a28;
+$darkgrey-1: #060606;
+$darkgrey-2: #fff;
+$darkblack: #fff;
